Tabs with new blank parent: include parent chooser

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -40,6 +40,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
         #set($rowIdValue = $originalTableDataRow.get($sessionTable.getPrimaryKey()))
         #if($rowIdValue.isNull())
           #set($parentChooserRequired = true)
+          #set($parentChooserField = $field)
         #else
           #set($sessionRowId = $rowIdValue.getValueInteger())
         #end
