Tabs with new blank parent: include parent chooser initialised to blank

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -20,7 +20,11 @@
 #set($relatedField=$field.getRelatedField())##
 #set($relatedTable = $relatedField.getTableContainingField())
 ##
-#set($fieldValue=$tableDataRow.get($relatedField).toString())##
+#if($field.equals($parentChooserField))
+  #set($fieldValue = "")
+#else
+  #set($fieldValue=$tableDataRow.get($relatedField).toString())##
+#end
 #set($fieldDisplayValue = $field.getDisplayValue($fieldValue))##
 #set($useSecondaryDisplayValue = false)
 #if($field.getSecondaryDisplayField())
