--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -15,7 +15,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-#set($internalTableName = $sessionTable.getInternalTableName())
+#set($internalTableName = $field.getTableContainingField().getInternalTableName())
 #set($internalFieldName = $field.getInternalFieldName())
 #set($relatedField=$field.getRelatedField())##
 #set($relatedTable = $relatedField.getTableContainingField())
@@ -33,8 +33,6 @@
 	#set($useSecondaryDisplayValue = true)
   #end
 #end
-##
-## sessionTableName is set in edit.vm
 #if($globalEdit)##
 	#set($inputId="${internalFieldName}-globalEdit")##
 #elseif($userCanEdit)
