Image preview fix

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -91,12 +91,15 @@
 	  ## set the row ID for the related table
 	  ## so that if we choose a relation value for a particular record
 	  ## then click 'New' to add additional records, the same relation value is used
-    gtpb_update_record="true" ##
-    gtpb_internaltablename="$internalTableName"
-    ##gtpb_set_table="$internalTableName"
-    gtpb_rowid="$sessionRowId"
-    gtpb_rowidinternaltablename="$relatedTable.getInternalTableName()"##
-    gtpb_set_row_id="$fieldValue"##
+      gtpb_update_record="true" ##
+      gtpb_internaltablename="$internalTableName"
+      ##gtpb_set_table="$internalTableName"
+      gtpb_rowid="$sessionRowId"
+      gtpb_rowidinternaltablename="$relatedTable.getInternalTableName()"##
+      gtpb_set_row_id="$fieldValue"##
+      #if($field.equals($parentChooserField))
+        gtpb_refresh_after="true"
+      #end
 	#end ##
 	id="$inputId">##
 	#set($wholeDisplayValue = $viewTools.escape($fieldDisplayValue))
