--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -711,13 +711,13 @@ div#reportData {
   border: 1px solid #dddddd;
   font-size: 9pt;
   padding: 0.2em;
-  /* 
-  position: relative;
-  top: -0.4em;
-  */
   border-radius: 0.5em;
   font-family: Verdana,Arial,sans-serif;
   font-size-adjust: 0.58;
+}
+
+#reportData .block.parent_chooser select {
+  float: none;
 }
 
 #reportData .block textarea {
