--- a/gtpb_clientside/resources/modalFramework/modalFramework.css
+++ b/gtpb_clientside/resources/modalFramework/modalFramework.css
@@ -15,7 +15,8 @@ div#_md_blank {
   height:100%;
   top:0;
   left:0;
-  background:transparent url('blank.png');
+  /* background:transparent url('blank.png'); */
+  background-color: rgba(0,0,0,0.5);
   z-index:198; /* date picker is 199 */
 }
 
