--- a/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/user_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/user_details_data.vm
@@ -63,6 +63,6 @@
   </tr>
   <tr>
 	<td>Last login:</td>
-	<td>$view.getUsageStats().getLastLoginAge($sessionUser)</td>
+	<td colspan="2">$view.getUsageStats().getLastLoginAge($sessionUser)</td>
   </tr>
 </table>
