--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
@@ -73,7 +73,6 @@
         #end
     	#set($previousSection = $section)
     	#set($internalModuleName = $module.getInternalModuleName())
-    	
 		#set($moduleExpanded = false)
     	#if($mobile_device && $internalModuleName.equals($sessionReportModule.getInternalModuleName()))
 		  #set($moduleExpanded = true)
@@ -112,8 +111,13 @@
 			#else
 			  #set($setTab = "clear_custom_variable=tabTable")
             #end
-      		<a href="AppController.servlet?return=$pane2_template&set_table=$table.getInternalTableName()&set_report=$report.getInternalReportName()&set_report_row_limit=$thisReportRowLimit&clear_all_report_sorts=true&$setTab&set_custom_boolean=true&booleankey=overrideTableForm&custombooleanvalue=false&set_module=$module.getInternalModuleName()&cachebust=$viewTools.getRandomString()" #if(!$mobile_device)target="pane_2" class="report_tooltip" rel="AppController.servlet?return=gui/reports_and_tables/report_tooltip&set_custom_report=true&reportkey=tooltip_report&custominternalreportname=$report.getInternalReportName()"#end >
-      			$report
+            #if($view.loggedInUserAllowedTo("EDIT_TABLE_DATA",$table))
+              #set($bottomTab = 2)
+            #else
+              #set($bottomTab = 1)
+            #end
+      		<a href="AppController.servlet?return=$pane2_template&set_table=$table.getInternalTableName()&set_report=$report.getInternalReportName()&set_report_row_limit=$thisReportRowLimit&clear_all_report_sorts=true&$setTab&set_custom_boolean=true&booleankey=overrideTableForm&custombooleanvalue=false&set_module=$module.getInternalModuleName()&set_custom_string=true&stringkey=report_tabindex&customstringvalue=$bottomTab&cachebust=$viewTools.getRandomString()" #if(!$mobile_device)target="pane_2" class="report_tooltip" rel="AppController.servlet?return=gui/reports_and_tables/report_tooltip&set_custom_report=true&reportkey=tooltip_report&custominternalreportname=$report.getInternalReportName()"#end >
+      		  $report
       		</a>
           #end
     			<span class="recordcount">()</span>
