Set to edit or view tab when a report is clicked in pane 1: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -194,12 +194,12 @@
 				  #set($numberOfTabs = '3')
 				#end
 			  #end
-			  #if($numberOfTabs > 2)
-			    #set($tabNum = 2)
-			  #else
-			    #set($tabNum = 1)
-			  #end
-		      url += "&set_custom_string=true&stringkey=report_tabindex&customstringvalue=$tabNum";
+			  ###if($numberOfTabs > 2)
+			  ##  #set($tabNum = 2)
+			  ###else
+			  ##  #set($tabNum = 1)
+			  ###end
+		      ##url += "&set_custom_string=true&stringkey=report_tabindex&customstringvalue=$tabNum";
 		  #end
 		  loadIntoPane3(url,rowId,$numberOfTabs);
 	  }
