--- a/gtpb_clientside/WEB-INF/templates/gui/pane1.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane1.vm
@@ -60,9 +60,9 @@
 	    top.jQuery("button.toggleButton:first").click();
 	  }
 	  jQuery("a.report_tooltip").click(function() {
-	    alert("click " + $(this).attr("href"));
-	    parent.pane_2.document.location = $(this).attr("href");
-	    parent.pane_3.pane3TabInterface.showTab($(this).attr("data-tabNum"));
+	    alert("click " + jQuery(this).attr("href"));
+	    parent.pane_2.document.location = jQuery(this).attr("href");
+	    parent.pane_3.pane3TabInterface.showTab(jQuery(this).attr("data-tabNum"));
 	    return false;
 	  }
 	});
