--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -162,6 +162,9 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
       #parse($customisationsTemplateLocation)
     #end
   #end
+  #if($originalTable)
+    #set($sessionTable = $originalTable)
+  #end
   #set($tableActions = $view.getModuleActions($sessionTable.getInternalTableName()))
   #foreach($tableAction in $tableActions)
     <button class="tableaction" actiontemplate="$tableAction.getActionTemplate()" actionbuttons="$tableAction.getButtons()" callbackfunction="$tableAction.getCallbackFuncion()" actionname="$tableAction.getActionName()">&laquo; $tableAction &raquo;</button>
