Chart date axis interval better

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -352,11 +352,16 @@
 			   area: {
 			     animation: false,
 			   }
-			 #else
+			   #if($numDateFields == 1)
+			     ,series[{pointInterval: 364 * 24 * 3600 * 1000}]
+			   #elseif($numDateFields == 2)
+			     ,series[{pointInterval: 30 * 24 * 3600 * 1000}]
+			   #end
+		   #else
 		       bar: {
 			     animation: false,
 			   }
-			 #end
+		   #end
 		 },
 		 exporting: {
             buttons: {
