--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -34,9 +34,12 @@
 #set($groupings = $chart.getGroupings())
 #if($chartRows.size() == 1)
   #set($dateAxis = false)
-#end	
-#set($dateAxis = false)
+#end
 #if($dateAxis)
+  #set($columnDisplay = false)
+  #if(($chartRows.size() * $aggregateFunctions.size()) < 11)
+    #set($columnDisplay = true)
+  #end
   ## Work out date format for tooltip
   #set($numDateFields = 1)
   #set($dateFormat = "%Y")
@@ -59,10 +62,10 @@
 ## Work out if we can display data as a pie chart
 #set($pieChart = false)
 #if((!$dateAxis) && ($chartRows.size() > 1) && ($chartRows.size() < 5) && ($aggregateFunctions.size() == 1))
-  ###set($pieChart = true)
+  #set($pieChart = true)
 #end
 #if($chartRows.size() > 0)
-#if((!$dateAxis) && (!$pieChart))
+#if(((!$dateAxis) || $columnDisplay) && (!$pieChart))
   ## we need to create category labels
   #set($xAxisCategories = [])
   #set($maxXAxisChars = 5)
@@ -231,11 +234,17 @@
           defaultSeriesType: 'scatter',
           ##defaultSeriesType: 'column',
         #elseif($timeline || ($aggregateFunctions.size() > 1))
-          defaultSeriesType: 'line',
-          ##defaultSeriesType: 'column',
+          #if($columnDisplay)
+            defaultSeriesType: 'column',
+          #else
+            defaultSeriesType: 'line',
+          #end
         #else
-          defaultSeriesType: 'area',
-          ##defaultSeriesType: 'column',
+          #if($columnDisplay)
+            defaultSeriesType: 'column',
+          #else
+            defaultSeriesType: 'area',
+          #end
         #end
         zoomType: 'x',
 			#elseif($pieChart)
