Test column date chart x-axis labels

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -296,6 +296,13 @@
                 	month: '%Y',
                 	year: '%Y'
                  }
+               #elseif($dateFormat.equals("%B %Y"))
+			     ,dateTimeLabelFormats: {
+                	day: '%B %Y',
+                	week: '%B %Y',
+                	month: '%B %Y',
+                	year: '%Y'
+                 }
 			   #end
 		     #else
                categories: $xAxisCategories
