Test column date chart x-axis labels

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -298,7 +298,7 @@
                  }
                #elseif($dateFormat.equals("%B %Y"))
 			     ,dateTimeLabelFormats: {
-                	day: '%B %Y',
+                	day: '',
                 	week: '%B %Y',
                 	month: '%B %Y',
                 	year: '%Y'
