Test column date chart x-axis labels: one per month/year

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -296,7 +296,10 @@
                 	month: '%Y',
                 	year: '%Y'
                  }
-               #elseif($dateFormat.equals("%B %Y"))
+                 #if($columnDisplay)
+                   ,tickInterval: 86400000 * 365
+                 #end
+               #elseif($dateFormat.equals("%B %Y") && $columnDisplay)
                  ,tickInterval: 86400000 * 31
 			   #end
 		     #else
