--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -109,6 +109,14 @@
       #end
     </td>
   </tr>
+  <tr class="advanced">
+    <td>Memory limit:<br>
+      <span class='greytext'><i>In exceptional cases, an administrator may want to override the default <a href="http://www.postgresql.org/docs/current/static/runtime-config-resource.html" target="_blank">working memory (work_mem)</a> limit</i></span>
+    </td>
+    <td>
+      <input type="text" name="memoryallocation" gtpb_update_report value="$report" pane1_report_name="$pane1_report_name" onkeyup="top.oBuffer.writeBuffer(this);" maxKeyCount="2" identifier="$internalReportName" gtpb_internalreportname="$internalReportName" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused')"/> MB
+    </td>
+  </tr>
   <tr id="showAdvanced">
     <td >&nbsp;</td>
     <td><a href="javascript:showAdvanced();">advanced options</a></td>
