--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -112,7 +112,7 @@
 	  #if(($resource_folder!='user') && ($resource_folder!='roles'))
 		  #set($sessionFilterString = $sessionData.getCustomString('filtering_on'))
 		  #set($filtersShouldBeShown = ($sessionFilterString=='true'))
-		  #if($viewTools.isNull($sessionFilterString) && ($view.getLoggedInUser().getUserType() == "REPORT"))
+		  #if($viewTools.isNull($sessionFilterString) && ($view.getLoggedInUser().getUserType() != "FULL"))
 			#set($filtersShouldBeShown = true)
 		  #end
 	  #end
