--- a/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/pane3.vm
@@ -92,7 +92,7 @@
 		} else {
 		  jqOtherButton = $(oPane2Butt);
 		}
-		if (jqThisButton.hasClass("REPORT")) {
+		if (jqThisButton.hasClass("REPORT") || jqThisButton.hasClass("LIMITED") || jqThisButton.hasClass("EXECUTIVE_DASHBOARD")) {
 		  if(jqThisButton.hasClass("selected") && jqOtherButton.hasClass("selected")) {
 			  jqOtherButton.click();
 			}
@@ -102,7 +102,7 @@
     var targetFrame = 2;
 	  var currentPercent = 0;
 	  fInitFrameAnimation();
-		if (jqThisButton.hasClass("REPORT")) {
+		if (jqThisButton.hasClass("REPORT") || jqThisButton.hasClass("LIMITED") || jqThisButton.hasClass("EXECUTIVE_DASHBOARD")) {
 		  document.getElementById('oViewPane').contentWindow.document.getElementById('rowsWrapper').rows=fRowsVal();					 						 
     } else {
 	    fAnimateFrame(0.1, currentPercent, targetPercent, targetFrame);
